--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
 </head>
 
 <body>
+    <div id="demo1"></div>
+    <div id="demo2"></div>
+    <div id="demo3"></div>
+    <div id="demo4"></div>
+    <button id="demo5" onclick="onClick(this)">Click</button>
+    <div id="demo6"></div>
+    <div id="demo7"></div>
+    <div id="demo8"></div>
+    <div id="demo9"></div>
+    <div id="demo10"></div>
 
     <script src="index.js"></script>
 </body>
