--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 </head>
 
 <body>
+    <div id="demo1"></div>
+    <div id="demo2"></div>
+    <div id="demo3"></div>
+    <div id="demo4"></div>
+    <div id="demo5"></div>
 
     <script src="index.js"></script>
 </body>
