--- a/index.html
+++ b/index.html
@@ -9,8 +9,15 @@
 </head>
 
 <body>
+    <div id="demo1"></div>
+    <div id="demo2"></div>
+    <div id="demo3"></div>
+    <div id="demo4"></div>
+    <div id="demo5"></div>
 
     <script src="index.js"></script>
+    <!-- 不要加入 type 宣告 預設就是宣告成javascript了 -->
+    <!-- <script src="index.js" type="text/javascript"></script> -->
 </body>
 
 </html>
