DOM Document experiment

--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
 </head>
 
 <body>
-
+    <div id="demo1"></div>
+    <span class="demo2"></span>
+    <span class="demo2"></span>
+    <p></p>
+    <p></p>
+    <p></p>
+    <div id="demo3"></div>
+    <div id="demo4"></div>
     <script src="index.js"></script>
 </body>
 
