dom elements experiments

--- a/index.html
+++ b/index.html
@@ -9,6 +9,24 @@
 </head>
 
 <body>
+    <div id="demo1"></div>
+    <div id="demo2"></div>
+    <div id="main">
+        <p></p>
+        <p></p>
+        <p></p>
+    </div>
+    <div id="side">
+        <span class="item"></span>
+        <span class="item"></span>
+        <span class="item"></span>
+    </div>
+
+    <form id="form1" action="">
+        <input type="text" value="aaa">
+        <input type="text" value="bbb">
+    </form>
+    <div id="demo3"></div>
 
     <script src="index.js"></script>
 </body>
