--- a/index.html
+++ b/index.html
@@ -9,6 +9,27 @@
 </head>
 
 <body>
+    <button id="button1">Show Date</button>
+    <div id="demo1"></div>
+
+    <button id="button2">Hello World</button>
+    <div id="demo2"></div>
+
+    <div id="demo3"></div>
+
+    <button id="button3">pass parameter demo</button>
+    <div id="demo4"></div>
+
+    <div id="outer1" style="background-color:yellow">
+        外
+        <p id="inner1" style="background-color:pink">內</p>
+    </div>
+
+    <div id="outer2" style="background-color:yellow">
+        外
+        <p id="inner2" style="background-color:pink">內</p>
+    </div>
+    <button id="button4">remove over & out event</button>
 
     <script src="index.js"></script>
 </body>
