--- a/index.html
+++ b/index.html
@@ -8,13 +8,7 @@
     <title>Document</title>
 </head>
 
-<body style="scroll:scroll">
-    <div id="demo1"></div>
-    <div id="demo2"></div>
-    <div id="demo3"></div>
-    <div id="demo4"></div>
-    <div id="demo5"></div>
-    <div id="demo6"></div>
+<body>
 
     <script src="index.js"></script>
 </body>
