--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 </head>
 
 <body>
+    <div id="demo1"></div>
+    <div id="demo2"></div>
+    <div id="demo3"></div>
+    <div id="demo4"></div>
+    <div id="demo5"></div>
+    <button onclick="forwardToMyPage()">go to my blog</button>
 
     <script src="index.js"></script>
 </body>
