--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
 
 <body>
+    <button onclick="back()">＜－</button>
+    <button onclick="forward()">－＞</button>
 
     <script src="index.js"></script>
 </body>
