popup boxes experiment

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 </head>
 
 <body>
+    <button onclick="onAlert()">Alert Box</button>
+    <button onclick="onConfirm()">Confirm Box</button>
+    <div id="demo1"></div>
+    <button onclick="onPrompt()">Prompt Box</button>
+    <div id="demo2"></div>
+    <button onclick="onAlert2()">Alert with break the lines</button>
 
     <script src="index.js"></script>
 </body>
