timing events experiment

--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
 </head>
 
 <body>
-
+    <button onclick="timeStart()">Time Start</button>
+    <button onclick="timeStop()">Step</button>
+    <div id="demo1">Shawn</div>
+    <button onclick="timeStartContinuous()">Time Start</button>
+    <button onclick="timeStopContinuous()">Step</button>
+    <div id="demo2">My Style</div>
     <script src="index.js"></script>
 </body>
 
